[package]
name = "toio-midi"
version = "0.1.0"
authors = ["Yushi OMOTE <yushiomote@gmail.com>"]
edition = "2018"

[dependencies]
ghakuf = "0.5"
structopt = "0.3"
env_logger = "0.7"
log = "0.4"
toio = { path = "../toio-rs" }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
anyhow = "1.0"